# acci_rust

./: .clinerules  .clippy.toml  .cursorrules  .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  PROMPT.md  README.md  deny.toml  docker-compose.yml  rust-toolchain.toml  rustfmt.toml
.sqlx/: query-0d85cc94cc8a1c0f381b47a7f850668c56559d28e297ba8b53889d3c583f2a76.json  query-17c249fd2cf4fbf5272e024043f9d33c1b55d116953515a952a91fb65dd04da1.json  query-2935fcc8f675e56eaac51a56751c8094af1fcba6ed5c45a5f3195e66c42bf277.json  query-47317e5bbe8e97f48a82d7ea8fb2287960d03749df481396f1c3c68c0e3f2ff9.json  query-621db1e0d81b4899e5ce2d041d03cc012c4c0c4e7d9cac53b367e5a13f36335a.json  query-854a16f4034373b98e3e926140520f4af5ec0e811a0a96fe9eaea36fef35ee14.json  query-993181d7a7fd7b2fe7f817beb2dac7ac978bd1dbe9e4a896495b498eb8e16fe5.json  query-a19bbb6b7e13b2ee3e668744020f22f5797ba7d1fac913e7a3315d9ec191232c.json  query-a1fb49972f6192ee48ec25022a475d7a45c37caf94f9d5c95b072c4ece87d46f.json  query-b306b75f290060b62c769fb601a6a876eda09d5b8bd2e3f5bbc5f56bd36d7453.json  query-bb7bc6f1a08c1a05c3ea09217f9623e9f9f2ade044d3c2660f2752c76af4b12b.json  query-d1de93fff9d32f76d9ec1d02e85862b5d024926e4c45f4b19b3d5404f70c6776.json  query-e1e02b6b32dee7c3925afe1f23faa0f2d87670da3659103c82ccff87a4f7b1fd.json  query-f684ac64a20c3179de6ec87e60edaa0ff65a6e898981b0c06f1384f1b4722b37.json
doc/architecture/: identity-management.md  milestones.md
migrations/: 20250128000001_initial_schema.sql
src/: lib.rs  main.rs
src/core/: config.rs  database.rs  mod.rs  server.rs
src/modules/: mod.rs
src/modules/identity/: auth.rs  mfa.rs  mod.rs  models.rs  rbac.rs  repository.rs  service.rs  session.rs  session_manager.rs
src/modules/identity/sso/: mod.rs  models.rs  oidc.rs  repository.rs  saml.rs  service.rs
src/modules/tenant/: handlers.rs  mod.rs  models.rs  repository.rs  service.rs
src/shared/: error.rs  mod.rs  models.rs  traits.rs  types.rs
tests/: integration_test.rs
