[package]
name = "acci_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"

# Security
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
jsonwebtoken = "9.2"
ring = "0.17"
rustls = "0.22"

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "time", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp", "json"] }

# Caching
moka = { version = "0.12", features = ["sync"] }

# Web Framework
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tower = { version = "0.4", features = ["util"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"
opentelemetry = { version = "0.20", features = ["rt-tokio-current-thread"] }

[dev-dependencies]
tokio-test = "0.4"
