[package]
name = "acci_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { version = "1.36", features = ["full"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
envy = "0.4"

# Logging & Metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Web Framework
axum = { version = "0.7", features = ["macros", "json"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1.0", features = ["server"] }
bytes = "1.5"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "time", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# Authentication
jsonwebtoken = "9.2"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
rand = "0.8"
totp-rs = "5.4"
base32 = "0.4"
qrcode = { version = "0.13", features = ["svg"] }

# SSO
samael = "0.0.13"  # SAML implementation
openidconnect = "3.4"  # OpenID Connect implementation
url = "2.5"
reqwest = { version = "0.11", features = ["json"] }
x509-parser = "0.15"
xml-rs = "0.8"
ring = "0.17"
base64 = "0.21"

# Utilities
uuid = { version = "1.7", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde"] }
async-trait = "0.1"
moka = { version = "0.12", features = ["sync"] }
once_cell = "1.19"

[dev-dependencies]
tokio-test = "0.4"
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["redis", "postgres"] }
